--- a/src/assets/scss/findjob.scss
+++ b/src/assets/scss/findjob.scss
@@ -92,8 +92,9 @@
 
       .job-list {
         flex: 1;
-        background: #fff;
-        padding: 20px;
+        // // background: #fff;
+        // padding: 20px;
+        // padding-top: 0;
         border-radius: 4px;
 
         .pagination {
